syntax = "proto3";
package DomainServices.HouseholdService;
option csharp_namespace = "DomainServices.HouseholdService.Contracts";

import "google/protobuf/wrappers.proto";
import "Identity.proto";
import "NullableGrpcDate.proto";
import "NullableGrpcDateTime.proto";
import "Obligation.proto";
import "IncomeInList.proto";

message CustomerOnSA {
    int32 CustomerOnSAId = 1;

    int32 SalesArrangementId = 2;
    
    repeated cis.types.Identity CustomerIdentifiers = 3;
    
    int32 CustomerRoleId = 4;
    
    string FirstNameNaturalPerson = 6;
    
    string Name = 7;
    
    cis.types.NullableGrpcDate DateOfBirthNaturalPerson = 8;

    repeated Obligation Obligations = 9;

    repeated IncomeInList Incomes = 10;

    cis.types.NullableGrpcDateTime LockedIncomeDateTime = 11;

    google.protobuf.Int32Value MaritalStatusId = 12;
}
